# SH3-peptide-modeling

./: README.md  SH3_MODELING_NET.ipynb  SH3_MODELING_utils.ipynb  alignSH3.py  transform.py
SH3-Net/variables/: variables.index
additional files/: RMSDbyChain.py  boxplot_hackathon.R  scatterplot_hackathon.R
create_pdb/: main.py  sh3_chain_res.csv
create_pdb/ready_pdbs/: .~lock.pdb1a0n.pdb#  .~lock.pdb1avz.pdb#
extractClosestProtein/: CMakeLists.txt  NewResultsAllNoTran.txt  main.cpp  peptide_chain_res.csv  structalign.cc
sh3_model/: keras_metadata.pb  saved_model.pb
